avoid font text flickering on transitions

--- a/assets/sass/partials/_page.scss
+++ b/assets/sass/partials/_page.scss
@@ -2,6 +2,11 @@
 // Styles for individual pages
 // --------------------------------------------------
 
+// fix font flickering on transitions 
+body {
+  -webkit-backface-visibility: hidden;
+}
+
 #content {
   background-color: #fff;
 }
